--- a/HideAndSeekGame/backend/metadata/databases/game-db/tables/public_zombies_leader_board.yaml
+++ b/HideAndSeekGame/backend/metadata/databases/game-db/tables/public_zombies_leader_board.yaml
@@ -20,9 +20,7 @@ select_permissions:
         - rounds
         - player_id
         - username
-      filter:
-        player_id:
-          _eq: X-Hasura-User-Id
+      filter: {}
 update_permissions:
   - role: user
     permission:
