--- a/HideAndSeek7/server/package.json
+++ b/HideAndSeek7/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/colyseus/create-colyseus#readme",
   "devDependencies": {
+    "@colyseus/cloud": "^1.0.4",
     "@colyseus/loadtest": "^0.14.7",
     "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
@@ -34,6 +35,7 @@
     "@colyseus/arena": "^0.14.24",
     "@colyseus/monitor": "^0.14.22",
     "@colyseus/social": "^0.11.7",
+    "@colyseus/tools": "^0.15.17",
     "@inworld/nodejs-sdk": "^1.3.1",
     "@types/date-and-time": "^0.13.0",
     "@types/debug": "^4.1.7",
