--- a/HideAndSeek7/server/package.json
+++ b/HideAndSeek7/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "loadtest": "colyseus-loadtest loadtest/example.ts --room my_room --numClients 2",
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
     "clean": "node node_modules/rimraf/bin lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -40,7 +40,7 @@
     "@types/date-and-time": "^0.13.0",
     "@types/debug": "^4.1.7",
     "@types/node": "^18.11.10",
-    "colyseus": "^0.15.0",
+    "colyseus": "^0.14.23",
     "cors": "^2.8.5",
     "date-and-time": "^2.2.1",
     "decentraland-crypto-fetch": "^1.0.3",
