--- a/HideAndSeek7/package.json
+++ b/HideAndSeek7/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@dcl-sdk/utils": "^1.1.2",
     "colyseus.js": "^0.14.15-alpha.0",
+    "dcl-npc-toolkit": "^1.1.4",
     "dcl-ui-toolkit": "^0.9.1"
   },
   "bundleDependencies": [
